syntax = "proto3";
option go_package = ".;pb";

package proto;

enum ElementMessageType {
  UNKNOWN = 0;
  ERROR = 1;
  CHAT_MESSAGE = 2;
  PLAY = 3;
  PAUSE = 4;
  CHECK_SEEK = 5;
  TOO_FAST = 6;
  TOO_SLOW = 7;
  CHANGE_RATE = 8;
  CHANGE_SEEK = 9;
  CHANGE_CURRENT = 10;
  CHANGE_MOVIES = 11;
  CHANGE_PEOPLE = 12;
}

message BaseMovieInfo {
  string url = 1;
  string name = 2;
  bool live = 3;
  bool proxy = 4;
  bool rtmpSource = 5;
  string type = 6;
  map<string, string> headers = 7;
}

message MovieInfo {
  string id = 1;
  BaseMovieInfo base = 2;
  int64 createdAt = 3;
  string creator = 4;
}

message Status {
  double seek = 1;
  double rate = 2;
  bool playing = 3;
}

message Current {
  MovieInfo movie = 1;
  Status status = 2;
}

message ElementMessage {
  ElementMessageType type = 1;
  string sender = 2;
  string message = 3;
  double rate = 4;
  double seek = 5;
  optional Current current = 6;
  int64 peopleNum = 7;
  int64 time = 8;
}